fix(other): improved legacy components dark mode implementation
improved legacy components dark mode implementation

✅ Closes: COMUI-3633

--- a/packages/genesys-spark-components/src/components/legacy/gux-action-toast-legacy/gux-action-toast.light.scss
+++ b/packages/genesys-spark-components/src/components/legacy/gux-action-toast-legacy/gux-action-toast.light.scss
@@ -1,3 +1,4 @@
+@use '~genesys-spark/dist/beta/tokens/flare/ui.scss';
 @use '~genesys-spark/dist/scss/typography.scss';
 
 gux-action-toast-legacy {
@@ -7,7 +8,7 @@ gux-action-toast-legacy {
       align-self: auto;
       order: 0;
       margin: 0;
-      color: #2e394c;
+      color: ui.$gse-ui-toast-success-foregroundColor;
 
       @include typography.body-sm-bold;
     }
