--- a/packages/genesys-spark-components/src/components/legacy/gux-notification-toast-legacy/gux-notification-toast.scss
+++ b/packages/genesys-spark-components/src/components/legacy/gux-notification-toast-legacy/gux-notification-toast.scss
@@ -1,3 +1,4 @@
+@use '~genesys-spark/dist/beta/tokens/flare/ui.scss';
 @use '~genesys-spark/dist/scss/typography.scss';
 
 :host {
@@ -10,10 +11,9 @@
   width: 294px;
   padding: 16px 8px 16px 16px;
   margin-bottom: 4px;
-  color: #2e394c;
-  background: #f6f7f9;
-  border: 1px solid #b4bccb;
-  border-color: #b4bccb;
+  color: ui.$gse-ui-toast-success-foregroundColor;
+  background: ui.$gse-ui-toast-success-backgroundColor;
+  border: 1px solid ui.$gse-ui-card-default-border-color;
   border-radius: 4px;
   // need to replace with token
   box-shadow: 0 2px 4px rgb(32 41 55 / 24%);
@@ -31,19 +31,19 @@
   }
 
   &.gux-alert {
-    color: #ea0b0b;
+    color: ui.$gse-ui-toast-error-iconColor;
   }
 
   &.gux-warning {
-    color: #ffae00;
+    color: ui.$gse-ui-toast-warning-iconColor;
   }
 
   &.gux-positive {
-    color: #3c8527;
+    color: ui.$gse-ui-toast-success-iconColor;
   }
 
   &.gux-neutral {
-    color: #203b73;
+    color: ui.$gse-ui-toast-info-iconColor;
   }
 }
 
@@ -57,7 +57,7 @@
   align-self: auto;
   order: 0;
   margin: 0 12px 0 8px;
-  color: #2e394c;
+  color: ui.$gse-ui-toast-success-foregroundColor;
 
   .gux-title,
   .gux-message {
