--- a/packages/genesys-spark-components/src/components/legacy/gux-simple-toast-legacy/gux-simple-toast.scss
+++ b/packages/genesys-spark-components/src/components/legacy/gux-simple-toast-legacy/gux-simple-toast.scss
@@ -1,3 +1,5 @@
+@use '~genesys-spark/dist/beta/tokens/flare/ui.scss';
+
 :host {
   position: relative;
   display: flex;
@@ -7,9 +9,9 @@
   align-items: flex-start;
   width: 286px;
   margin-bottom: 4px;
-  color: #2e394c;
-  background: #f6f7f9;
-  border: 1px solid #b4bccb;
+  color: ui.$gse-ui-toast-success-foregroundColor;
+  background: ui.$gse-ui-toast-success-backgroundColor;
+  border: 1px solid ui.$gse-ui-card-default-border-color;
   border-radius: 4px;
   // need to replace with token
   box-shadow: 0 2px 4px rgb(32 41 55 / 24%);
@@ -23,19 +25,19 @@
   margin: 2px 0;
 
   &.gux-alert {
-    color: #ea0b0b;
+    color: ui.$gse-ui-toast-error-iconColor;
   }
 
   &.gux-warning {
-    color: #ffae00;
+    color: ui.$gse-ui-toast-warning-iconColor;
   }
 
   &.gux-positive {
-    color: #3c8527;
+    color: ui.$gse-ui-toast-success-iconColor;
   }
 
   &.gux-neutral {
-    color: #203b73;
+    color: ui.$gse-ui-toast-info-iconColor;
   }
 
   ::slotted(gux-icon) {
